# Cours

./: .gitignore  .mermaid  .vale.ini  CONTRIBUTING.md  LICENSE  README.md  SLIDES.md  Taskfile.yml  book.toml  flake.nix  lefthook.yml  package-lock.json
.vale/: Joblint  Microsoft  write-good
Wazuh/: wazuh_cours.md  wazuh_tp
book/html/: 404.html  (+7 more)
gestion-de-conf/: README.md  TD-vagrant.md  ansible-molecule.md  code-ansible.md  pratiques-ansible.md  presentation-ansible.md  presentation-gestion-conf.md  vagrant.md
hautedispo/: README.md  config-net-advanced.md  disponibilite.md  iscsi-mutlipath.md  keepalived.md  mysql-replication.md  tp-lvm.md
kubernetes/: README.md  kube-deployments.md  kube-helm-monitoring.md  kube-ingress.md  kube-metallb.md  kube-volumes.md  lab-kube.md  presentation-cloud.md  presentation-kube.md
licences/: README.html  README.md
linux/: config-linux.md  git.md  rappels-linux.md  rappels-scripting-bash.md  scripting.md  systemd.md
majeure/: README.md  cinematique-projet-opensource.md  descriptif.md  gestion-infra-run.md  logiciel-libre.md  maturite-SI.md  normes.md  projet-etude.md  syllabus-current.md  syllabus-tmp.md  syllabus.md
nix/: checks.nix  default.nix  dev-shell.nix  templates.nix  treefmt.nix  vale.nix
sdlc/: README.html  README.md  diagrams.drawio
src/: RADAR.md  README.md  SUMMARY.md
src/sdlc/tps/sdlc-tooling-workshop/rust/: Cargo.toml  dagger.json  mise.toml
src/sdlc/tps/sdlc-tooling-workshop/rust/.dagger/: go.mod
system/: README.html  README.md  diagrams.drawio
tasks/: Build.yaml  Lint.yaml  Slides.yaml
(+212 files in other folders)
