[package]
name = "demo"
version = "0.1.0"
edition = "2024"
description = "A minimal HTTP health check server for containerized deployments"
license = "MIT"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
